Fix contact form on mobile screens

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
 
     background: radial-gradient(#300202, #04053f);
     background-size: 400% 400%;
-    animation: gradientAnimation 20s infinite;
+    animation: gradientAnimation 10s infinite;
   }
 
   @keyframes gradientAnimation {
@@ -215,18 +215,6 @@ body {
   animation: gradient 10s ease infinite;
 }
 
-.blur-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  backdrop-filter: blur(100px) drop-shadow(100px 100px 100px rgb(0, 0, 0))
-    brightness(20%); /* Adjust the blur amount as needed */
-  z-index: 1000; /* Make sure it has a higher z-index than other elements */
-  pointer-events: none; /* Allow clicks to go through to the form */
-}
-
 .contact-container {
   position: fixed;
   top: 50%;
@@ -241,4 +229,71 @@ body {
     0.8
   ); /* Adjust the background color and opacity as needed */
   pointer-events: auto; /* Enable clicks within the form */
+}
+
+/* Default styles for mobile devices */
+@media only screen and (max-width: 767px) {
+  .contact-container {
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-52%, -50%);
+    z-index: 1001; /* Make sure it has a higher z-index than the blur container */
+    padding: 0px;
+    background-color: rgba(
+      10,
+      1,
+      1,
+      0.8
+    ); /* Adjust the background color and opacity as needed */
+    pointer-events: auto; /* Enable clicks within the form */
+    width: 90%;
+  }
+}
+
+.blur-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(100px) drop-shadow(100px 100px 100px rgb(0, 0, 0))
+    brightness(50%); /* Adjust the blur amount as needed */
+  z-index: 1000; /* Make sure it has a higher z-index than other elements */
+  pointer-events: none; /* Allow clicks to go through to the form */
+}
+
+/* Default style with background dimming for mobile devices */
+@media only screen and (max-width: 767px) {
+  .blur-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9); /* Adjust the transparency here */
+    z-index: 999;
+  }
+}
+
+/* Apply blur effect if backdrop-filter is supported */
+@supports (-webkit-backdrop-filter: blur(100px)) or
+  (backdrop-filter: blur(100px) brightness(50%)) {
+  .blur-container {
+    background-color: transparent;
+    -webkit-backdrop-filter: blur(100px);
+    backdrop-filter: blur(100px) brightness(50%);
+  }
+}
+
+/* Apply blur effect for specific browsers with prefixes */
+/* For example, adjust this for Safari on iOS */
+@media all and (max-width: 767px) {
+  @supports (-webkit-touch-callout: none) {
+    .blur-container {
+      background-color: transparent;
+      -webkit-backdrop-filter: blur(100px);
+      backdrop-filter: blur(100px) brightness(50%);
+    }
+  }
 }
